Time: 43 ms (21.38%) | Memory: 59.9 MB (21.49%) - LeetSync